# gnome-sudoku

./: .cvsignore  .gitignore  .gitlab-ci.yml  AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.md  ROADMAP  TODO  autogen.sh  configure.ac  git.mk  gnome-sudoku.desktop.in  gnome-sudoku.desktop.in.in  gnome-sudoku.doap  meson.build  meson_options.txt  org.gnome.sudoku.json  puzzle_creator.gladep  setup.py
build-aux/: org.gnome.Sudoku.Devel.json  org.gnome.Sudoku.json
data/: .gitignore  FAQ  FAQ-fr_FR  Makefile.am  easy  gnome-sudoku-menu.ui  gnome-sudoku.6  gnome-sudoku.appdata.xml  gnome-sudoku.appdata.xml.in  gnome-sudoku.css  gnome-sudoku.desktop.in  gnome-sudoku.desktop.in.in  gnome-sudoku.gresource.xml  gnome-sudoku.gresource.xml.in  gnome-sudoku.schemas.in  gnome-sudoku.ui  hard  medium  meson.build  org.gnome.Sudoku.appdata.xml.in  org.gnome.Sudoku.desktop.in  org.gnome.Sudoku.desktop.in.in  org.gnome.Sudoku.gschema.xml  org.gnome.Sudoku.metainfo.xml.in  org.gnome.Sudoku.metainfo.xml.in.in  org.gnome.Sudoku.service.in  org.gnome.gnome-sudoku.gschema.xml  org.gnome.gnome-sudoku.gschema.xml.in  org.gnome.sudoku.gschema.xml  preferences-dialog.blp  preferences-dialog.ui  preferences-window.ui  print-dialog.blp  print-dialog.ui  print-games.ui  print_games.ui  puzzle_generator.ui  screenshots-puzzle.skp  select_game.ui  shortcuts-window.blp  (+11 more)
data/icons/: Makefile.am
data/icons/HighContrast/: Makefile.am
data/icons/hicolor/: Makefile.am
glade/: Makefile.am  high_scores.glade  high_scores.glade~  new_game.glade  open_game.glade  print_games.glade  print_games.ui  puzzle_generator.glade  puzzle_generator.ui  select_game.glade  select_game.ui  tracker.glade
glade/game_selector/: game_selector.glade  game_selector.gladep
help/: .gitignore  ChangeLog  ChangeLog.old  LINGUAS  Makefile.am  gnome-sudoku.omf.in  meson.build
help/C/: Makefile.am  autofill.page  basics.page  bug-filing.page  bugs.page  commandline.page  develop.page  documentation.page  earmarks.page  gnome-sudoku-C.omf  gnome-sudoku.xml  highlighting.page  hints.page  index.page  intro.page  keyboard-shortcuts.page  license.page  notes.page  print-blank-puzzles.page  print-book.page  print-inprogress-game.page  rules.page  save-resume.page  statistics.page  strategy.page  toolbar.page  trackers.page  translate.page
help/C/figures/: trackers.webm
help/ca/: ca.po
help/cs/: cs.po
help/da/: da.po
help/de/: de.po
help/el/: el.po
help/en_GB/: en_GB.po
help/es/: es.po
help/eu/: eu.po
help/fr/: fr.po
help/gl/: gl.po
help/hu/: hu.po
help/id/: id.po
help/it/: it.po
help/kk/: kk.po
help/ko/: ko.po
help/oc/: oc.po
help/pl/: pl.po
help/pt_BR/: pt_BR.po
help/ru/: ru.po
help/sl/: sl.po
help/sr/: sr.po
help/sr@latin/: sr@latin.po
help/sv/: sv.po
help/uk/: uk.po
help/zh_CN/: zh_CN.po
images/: Makefile.am
lib/: Makefile.am  QQwing-client.vapi  QQwing-wrapper.cpp  QQwing-wrapper.h  backend.vala  board.vala  game.vala  highscores.vala  meson.build  qqwing-wrapper.cpp  qqwing-wrapper.h  qqwing.vapi  saver.vala  sudoku-backend.vala  sudoku-board.vala  sudoku-game.vala  sudoku-generator.vala  sudoku-saver.vala  sudoku-solver.vala
lib/qqwing/: qqwing-wrapper.cpp  qqwing-wrapper.h
po/: LINGUAS  Makevars  POTFILES.in  POTFILES.skip  README.TRANSLATORS  ab.po  af.po  am.po  ar.po  as.po  ast.po  az.po  be.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  ckb.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en@shaw.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  ga.po  gl.po  (+59 more)
src/: .cvsignore  .gitignore  Makefile.am  aspect-frame.vala  cell.vala  config.vapi  earmark.vala  game-view-layout.vala  game-view.vala  gnome-sudoku  gnome-sudoku.gresource.xml.in  gnome-sudoku.in  gnome-sudoku.in.in  gnome-sudoku.vala  grid-layout.vala  grid.vala  logical-sudoku-solver.vala  main-menu.vala  main.vala  menu-button.vala  menu-item.vala  meson.build  number-picker.vala  preferences-dialog.vala  preferences-window.vala  print-dialog.vala  print-multiple-dialog.vala  printer.vala  start-menu.vala  start-view.vala  sudoku-board.vala  sudoku-cell.vala  sudoku-game.vala  sudoku-generator.vala  sudoku-printer.vala  sudoku-saver.vala  sudoku-solver.vala  sudoku-store.vala  sudoku-view.vala  sudoku-window.vala  (+2 more)
src/blueprints/: game-view.blp  menu-button.blp  preferences-dialog.blp  print-multiple-dialog.blp  shortcuts-dialog.blp  shortcuts-window.blp  start-view.blp  window.blp
src/lib/: .cvsignore  Makefile.am  colors.py  cozycook.db  dancer.py  defaults.py  defaults.py.in  defaults.py~  defs.py.in  dialog_swallower.py  dialog_swallower.py~  game_selector.py  game_selector.py.old  game_selector.py~  gnome_sudoku.py  gnome_sudoku.py~  gsudoku.py  gsudoku.py.old  gsudoku.py~  gsudoku_copy.py  main.py  new_entry.py  number_box.py  output.ps  pausable.py  printing.py  py-shel  saver.py  simple_debug.py  sudoku.py  sudoku_copy.py  sudoku_generator_gui.py  sudoku_labeller.py  sudoku_maker.py  sudoku_thumber.py  timer.py  tracker_info.py
src/lib/gtk_goodies/: Makefile.am  Undo.py  dialog_extras.py  gconf_wrapper.py  image_extras.py
tools/: gsudoku_distutils.py
