include $(top_srcdir)/gnome-doc-utils.make
dist-hook: doc-dist-hook

DOC_ID = gnome-sudoku
DOC_INCLUDES = legal.xml

DOC_FIGURES = \
	figures/logo32.png		\
	figures/logo.png		\
	figures/possible-numbers.png	\
	figures/rowcolumnbox.png	\
	figures/stats-very-hard.png	\
	figures/strategy1.png		\
	figures/strategy2.png		\
	figures/trackers.webm

DOC_PAGES = \
	basics.page			\
	bug-filing.page			\
	commandline.page		\
	develop.page			\
	documentation.page		\
	highlighting.page		\
	hints.page			\
	index.page			\
	intro.page			\
	keyboard-shortcuts.page		\
	license.page			\
	notes.page			\
	print-blank-puzzles.page	\
	print-inprogress-game.page	\
	rules.page			\
	save-resume.page		\
	statistics.page			\
	strategy.page			\
	toolbar.page			\
	trackers.page			\
	translate.page

DOC_LINGUAS = ca cs de el en_GB es eu fr it oc pt_BR ru sl sr sr@latin sv da zh_CN

-include $(top_srcdir)/git.mk
