@YELP_HELP_RULES@
HELP_ID = gnome-sudoku

HELP_MEDIA = \
	figures/logo32.png		\
	figures/logo.png		\
	figures/possible-numbers.png	\
	figures/resuming.png		\
	figures/rowcolumnbox.png	\
	figures/stats-very-hard.png	\
	figures/strategy1.png		\
	figures/strategy2.png		\
	figures/trackers.webm

HELP_FILES = \
	basics.page			\
	bug-filing.page			\
	commandline.page		\
	develop.page			\
	documentation.page		\
	highlighting.page		\
	hints.page			\
	index.page			\
	keyboard-shortcuts.page		\
	legal.xml			\
	license.page			\
	notes.page			\
	print-blank-puzzles.page	\
	print-inprogress-game.page	\
	rules.page			\
	save-resume.page		\
	statistics.page			\
	strategy.page			\
	toolbar.page			\
	trackers.page			\
	translate.page

HELP_LINGUAS = ca cs de en_GB el es eu fr gl it oc pt_BR ru sl sr sr@latin sv da zh_CN

-include $(top_srcdir)/git.mk
