@YELP_HELP_RULES@
HELP_ID = gnome-sudoku

HELP_MEDIA = \
	figures/logo32.png		\
	figures/logo.png		\
	figures/resuming.png		\
	figures/rowcolumnbox.png	\
	figures/strategy1.png		\
	figures/strategy2.png

HELP_FILES = \
	basics.page			\
	bug-filing.page			\
	develop.page			\
	documentation.page		\
	earmarks.page			\
	highlighting.page		\
	index.page			\
	keyboard-shortcuts.page		\
	legal.xml			\
	license.page			\
	print-blank-puzzles.page	\
	print-inprogress-game.page	\
	rules.page			\
	save-resume.page		\
	strategy.page			\
	translate.page

HELP_LINGUAS = ca cs de en_GB el es eu fr gl hu it ko oc pl pt_BR ru sl sr sr@latin sv da zh_CN

-include $(top_srcdir)/git.mk
