help_media = [
  'figures/org.gnome.Sudoku.svg',
  'figures/rowcolumnbox.png',
  'figures/strategy1.png',
  'figures/strategy2.png'
]

help_sources = [
  'basics.page',
  'bug-filing.page',
  'develop.page',
  'documentation.page',
  'earmarks.page',
  'highlighting.page',
  'index.page',
  'keyboard-shortcuts.page',
  'legal.xml',
  'license.page',
  'print-blank-puzzles.page',
  'print-inprogress-game.page',
  'rules.page',
  'save-resume.page',
  'strategy.page',
  'translate.page'
]

gnome.yelp('gnome-sudoku',
  media: help_media,
  sources: help_sources)
