icon16dir=$(datadir)/icons/hicolor/16x16/apps
icon22dir=$(datadir)/icons/hicolor/22x22/apps
icon24dir=$(datadir)/icons/hicolor/24x24/apps
icon32dir=$(datadir)/icons/hicolor/32x32/apps
icon48dir=$(datadir)/icons/hicolor/48x48/apps
iconscalabledir=$(datadir)/icons/hicolor/scalable/apps

icon16_DATA = 16x16/gnome-sudoku.png
icon22_DATA = 22x22/gnome-sudoku.png
icon24_DATA = 24x24/gnome-sudoku.png
icon32_DATA = 32x32/gnome-sudoku.png
icon48_DATA = 48x48/gnome-sudoku.png
iconscalable_DATA = scalable/gnome-sudoku.svg
