docname = gnome-sudoku
lang = C
helpdir = $(datadir)/gnome/help/$(docname)/$(lang)
help_DATA = gnome-sudoku.xml legal.xml
EXTRA_DIST = $(help_DATA)
helpfigdir = $(helpdir)/figures/
helpfig_DATA = \
	figures/always_show_hint.png \
	figures/error_highlighting.png \
	figures/highlighting.png \
	figures/hints.png \
	figures/Print_Sudokus.png

EXTRA_DIST += $(helpfig_DATA)