SUBDIRS = gtk_goodies

gnomesudokudir = $(pythondir)/gnome_sudoku
gnomesudoku_PYTHON = \
	colors.py	\
	defaults.py	\
	dialog_swallower.py	\
	game_selector.py	\
	gnome_sudoku.py	\
	gsudoku.py	\
	__init__.py	\
	pausable.py	\
	printing.py	\
	saver.py	\
	simple_debug.py	\
	sudoku_generator_gui.py	\
	sudoku_labeller.py	\
	sudoku_maker.py	\
	sudoku_thumber.py \
	sudoku.py	\
	timer.py
